2012-02-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/random.c (random_init, _random_seed_stir_callback):
	  Scheduled initial timer for the min timeout instead of starting at 0.

	* src/munged/random.c (_random_seed_stir_callback): Disabled timer for
	  repeated stirrings if the minimum timeout is set to 0.
	* src/libcommon/munge_defs.h:
	  Updated comment for RANDOM_SEED_STIR_MIN_SECS.

	* src/munged/random.c (random_init):
	  Set _random_timer_id when initial callback is scheduled.

2012-02-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/random.c (_random_seed_stir_callback): Added.
	* src/munged/random.c (random_init):
	  Set timer for _random_seed_stir_callback().
	* src/munged/random.c (random_fini):
	  Canceled the next scheduled timer for _random_seed_stir_callback().
	* src/libcommon/munge_defs.h:
	  Added RANDOM_SEED_STIR_MAX_SECS and RANDOM_SEED_STIR_MIN_SECS.

2012-02-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/random.c (random_stir):
	  Replaced calls to random_add() with _random_add().

	* src/munged/random.c (random_fini): Stir the entropy pool before
	  writing out the seed file.

	* src/munged/random.h, src/munged/random.c (random_stir): Added.
	* src/munged/random.c (random_init): Replaced code to stir the entropy
	  pool with random_stir().

	* config/x_ac_expand_install_dirs.m4:
	  Changed _X_AC_EXPAND_INSTALL_DIRS_EVAL to loop over the eval
	  expansion in order to handle increased levels of indirection.

2012-02-22  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_expand_install_dirs.m4:
	  Created _X_AC_EXPAND_INSTALL_DIRS_EVAL.

	* : Updated copyright date range.

	* src/munged/random.c (random_init): Stir the entropy pool with the
	  current time.

2012-02-21  Chris Dunlap  <cdunlap@llnl.gov>

	* configure, config/x_ac_arch.m4: Applied patches from asau@netbsd.org
	  to fix calls to test for string equality on NetBSD.  (issue 12)

2011-02-27  Chris Dunlap  <cdunlap@llnl.gov>
